@@ -38,6 +38,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include <libtorrent/add_torrent_params.hpp>
 #include <libtorrent/torrent_handle.hpp>
 #include <libtorrent/alert_types.hpp>
+#include <libtorrent/magnet_uri.hpp>
 
 namespace lt = libtorrent;
 int main(int argc, char const* argv[])
@@ -49,7 +50,12 @@ int main(int argc, char const* argv[])
 	lt::session ses;
 
 	lt::add_torrent_params atp;
-	atp.url = argv[1];
+	lt::error_code ec;
+	lt::parse_magnet_uri(argv[1], atp, ec);
+	if (ec) {
+		std::cerr << "invalid magnet URI: " << ec.message() << std::endl;
+		return 1;
+	}
 	atp.save_path = "."; // save in current dir
 	lt::torrent_handle h = ses.add_torrent(std::move(atp));
 
